# Consolation

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: menu_selected.xcf
src/: drawing.rs  focus.rs  input_handler.rs  lib.rs  main.rs  output_map.rs  raw.rs  render.rs  shell.rs  state.rs  udev.rs  window_map.rs  winit.rs  x11.rs
src/shell/: element.rs  mod.rs  output_manager.rs  ssd.rs  toplevel_manager.rs  window_control.rs  x11.rs  xdg.rs
src/xwayland/: mod.rs
