[package]
name = "consolation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git" }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git", optional=true }
bitflags = "2.2.1"
fps_ticker = {version="1.0.0", optional=true}
thiserror = "1"
image = { version = "0.23.14", optional = true }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rand = "0.8"
rusttype = "0.9.2"
xcursor = {version = "0.3.3", optional = true}
xkbcommon = "0.7.0"
renderdoc = {version = "0.11.0", optional = true}
puffin_http = { version = "0.13", optional = true }
profiling = { version = "1.0" }
is_executable = { version ="1.0.1"}
xdg={version="2.5.2"}

[dependencies.x11rb]
optional = true
version = "0.13.0"
default-features = false
features = [ "composite" ]

[build-dependencies]
gl_generator = "0.14"

[features]
debug = [ "fps_ticker", "image/png", "renderdoc" ]
default = [ "winit", "udev", "egl", "xwayland", "image/png"]
egl = [ "smithay/use_system_lib", "smithay/backend_egl" ]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "image",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor"
  ]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
xwayland = [ "smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor" ]
x11 = [ "smithay/backend_x11", "x11rb", "egl", "smithay/renderer_gl" ]
test_all_features = ["default", "debug"]